<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>JMugen.Parent</groupId>
    <artifactId>JMugen.Parent</artifactId>
    <version>${jmugen.version}</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <jmugen.version>0.0.1-SNAPSHOT</jmugen.version>
        <main.class>org.lee.mugen.test.TestMenu</main.class>
<!--        <main.class>org.mugen.launch.Launch</main.class>-->
<!--        <main.class>org.lee.mugen.test.TestGameFight</main.class> -->
    </properties>

    <modules>
        <module>JMugen.Debug</module>
        <module>JMugen.Common</module>
        <module>JMugen.Launcher</module>
        <module>JMugen.plugin.audio.adx</module>
        <module>JMugen.Properties</module>
        <module>JMugen.Render.Java</module>
        <module>JMugen.Render.jogl</module>
        <module>JMugen.Render.Lwjgl</module>
        <module>JMugen</module>
        <module>Syntax</module>
        <!-- joglUtils module still using openGl1. so, let's skip for while -->
        <!--<module>joglUtils</module>-->
    </modules>

    <build>
        <!-- global -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
